<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/login"
        android:onClick="login" />

    <EditText
        android:id="@+id/loginEmailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginButton"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="64dp"
        android:layout_marginRight="14dp"
        android:ems="10"
        android:inputType="text"
        android:singleLine="true" >
        
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/loginPwordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginButton"
        android:layout_alignLeft="@+id/loginEmailInput"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="text|textPassword"
        android:singleLine="true" />

    <TextView
        android:id="@+id/loginPwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/loginPwordInput"
        android:layout_toLeftOf="@+id/loginPwordInput"
        android:text="@string/loginPwordText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/loginEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/loginEmailInput"
        android:layout_alignLeft="@+id/loginPwordLabel"
        android:text="@string/loginEmailText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginEmailLabel"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
