<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/editAddItem"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
	    <View
			android:layout_width="70dp"
	        android:layout_height="0dp" />
		<EditText
			android:id="@+id/editNewItemDescription"
			android:layout_width="230dp"
			android:layout_height="wrap_content" 
			android:inputType="text"/>
	</LinearLayout>

	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >

	    <View
			android:layout_width="5dp"
	        android:layout_height="0dp" />

	    <Button
	        android:id="@+id/editNewItemVoiceButton"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="60dp"
	        android:layout_height="wrap_content"
	        android:onClick="addItemByVoice"
	        android:text="@string/editListVoiceButton" />
	    
	    <View
			android:layout_width="10dp"
	        android:layout_height="0dp" />

		<TextView
			android:id="@+id/editNewItemCatHeader"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/editListCategory"
			android:textAppearance="?android:attr/textAppearanceSmall" />

		<Spinner
		    android:id="@+id/editNewItemCategories"
		    android:layout_width="150dp"
		    android:layout_height="wrap_content"
		    android:entries="@array/categories"
		    android:prompt="@string/editListCatPrompt" />

	</LinearLayout>

</LinearLayout>