<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/editListHeader"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="0.05"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/editListScroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom"
        android:layout_weight="0.8" />

    <LinearLayout
        android:id="@+id/editListButtonBar"
        style="@android:style/ButtonBar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="0.1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/editListAddButton"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:onClick="addItem"
            android:text="@string/editListAddButtonText" />

        <Button
            android:id="@+id/editListSaveButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:onClick="saveList"
            android:text="@string/editListSaveButtonText" />
    </LinearLayout>

</LinearLayout>